--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Find Your New Vehicle At
-                                            Honda-cbr</h5>
+                                        <h5 class="modal-title" id="exampleModalLabel">Find Your New Vehicle Maple-Honda
+                                        </h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                             aria-label="Close"></button>
                                     </div>
@@ -113,6 +113,54 @@
                     </div>
                     <div class="col-12 col-lg-4">
                         <img src="images/feature-bike.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- latest-news-section -->
+        <section>
+            <div class="container">
+                <h3 class="fw-bold py-5 ">Latest-News</h3>
+                <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
+                    <div class="col">
+                        <div class="card h-100 shadow rounded-3 bike-news-image">
+                            <img src="images/bike-1.png" class="card-img-top rounded-3" alt="...">
+                            <div class="card-body my-4 ">
+                                <h3 class="card-title fw-bold">Ducati XDIAVEL S-73</h3>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat,
+                                    aspernatur.</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-info fw-bold fs-5 px-4 mx-3">Read-More</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow rounded-3 bike-news-image">
+                            <img src="images/bike-2.png" class="card-img-top rounded-3" alt="...">
+                            <div class="card-body my-4">
+                                <h3 class="card-title fw-bold">Motorcycles & Scooters</h3>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat,
+                                    aspernatur.</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-info fw-bold fs-5 px-4 mx-3">Read-More</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 shadow rounded-3 bike-news-image">
+                            <img src="images/bike-3.png" class="card-img-top rounded-3" alt="...">
+                            <div class="card-body my-4">
+                                <h3 class="card-title fw-bold">2021 Honda CBR500R</h3>
+                                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat,
+                                    aspernatur.</p>
+                            </div>
+                            <div>
+                                <button class="btn btn-info fw-bold fs-5 px-4 mx-3">Read-More</button>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -275,57 +323,59 @@
                 </div>
             </div>
         </section>
-        <!-- Latest-news section  -->
+        <!-- Latest-collection-section  -->
         <section class="container">
-            <h2 class="fw-bold text-center p-5 m-3"> Latest <span class="text-warning">-News </span></h2>
+            <h2 class="fw-bold text-center p-5 m-3"> Latest <span class="text-warning">-Bike-Collection </span></h2>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active ">
                         <div class="row p-5 bg-secondary rounded d-flex align-items-center">
-                            <div class="col-lg-7 text-white my-3">
+                            <div class="col-lg-7 col-12 text-white my-3 ">
                                 <h4 class="w-75">Harley-Davidson launches cheaper LiveWire electric motorcycle</h4>
                                 <p class="w-75">The iconic American motorcycle brand announced Thursday a cheaper
                                     version of its
                                     original Harley-Davidson .The LiveWire One is priced at $21,999. </p>
-                                <button class="btn btn-info fw-bold text-white">Read-more..</button>
+                                <button class="btn btn-info fw-bold text-white">Purchase</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/bike-news-1.jpg" class="d-block w-100 bike-news" style="height: 313px;"
                                     alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item  ">
                         <div class="row p-5 bg-secondary rounded d-flex align-items-center">
-                            <div class="col-lg-7 text-white my-3">
+                            <div class="col-lg-7 col-12 text-white my-3">
                                 <h4 class="w-75">2021 GET ON! Adv Fest: The Alternative Sturgis Adventure Motorcycle
-                                    Rally</h4>
+                                    Rally
+                                </h4>
                                 <p class="w-75">An invitation to attend the FIRST Adventure Motorcycle Rally (that I’m
                                     aware of) in Sturgis, South Dakota came from our friend Anthony Silvotti at Revzilla
                                 </p>
-                                <button class="btn btn-info fw-bold text-white">Read-more..</button>
+                                <button class="btn btn-info fw-bold text-white">Purchase</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/bike-news-2.jpg" class="d-block w-100 bike-news" style="height: 313px;"
                                     alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item  ">
                         <div class="row p-5 bg-secondary rounded d-flex align-items-center">
-                            <div class="col-lg-7 text-white my-3">
-                                <h4 class="w-75">Exclusive: 2021 Honda CBR650R Review - Big on Character, Performance,
-                                    Sound and Price</h4>
-                                <p class="w-75">The Honda CBR650R is the successor to the Honda CBR650F and while their
-                                    names have the difference of just one letter. </p>
-                                <button class="btn btn-info fw-bold text-white">Read-more..</button>
+                            <div class="col-lg-7 col-12 text-white my-3">
+                                <h4 class="w-75">Harley-Davidson launches cheaper LiveWire electric motorcycle</h4>
+                                <p class="w-75">The iconic American motorcycle brand announced Thursday a cheaper
+                                    version of its
+                                    original Harley-Davidson .The LiveWire One is priced at $21,999. </p>
+                                <button class="btn btn-info fw-bold text-white">Purchase</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-12">
                                 <img src="images/bike-news-3.jpg" class="d-block w-100 bike-news" style="height: 313px;"
                                     alt="...">
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                     data-bs-slide="prev">
