--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <div class="card-body my-4">
                                 <h3 class="card-title fw-bold">2021 Honda CBR500R</h3>
                                 <p class="card-text">2021 GET ON! Adv Fest: The Alternative Sturgis Adventure Motorcycle
-                                    Rally and Hinckley firm is producing just 765 limited-edition Moto2 bikes for the US
+                                    Rally Hinckley firm is producing just 765 limited-edition Moto2 bikes for the US
                                     and Canadian markets.</p>
                             </div>
                             <div>
