--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 <h3 class="card-title fw-bold">Motorcycles & Scooters</h3>
                                 <p class="card-text">An invitation to attend the FIRST Adventure Motorcycle Rally (that
                                     I’m
-                                    aware of) in Sturgis,in Sturgis, South Dakota came from our friend Anthony Silvotti
+                                    aware of) in Sturgis, Sturgis, South Dakota came from our friend Anthony Silvotti
                                     at Revzilla
                                 </p>
                             </div>
